<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_agregar"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/agregar_peluche"/>
        <item
                android:id="@+id/nav_buscar"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/buscar_peluche"/>
        <item
                android:id="@+id/nav_eliminar"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/eliminar_peluche"/>
        <item
                android:id="@+id/nav_inventario"
                android:icon="@drawable/ic_menu_agenda"
                android:title="@string/ver_inventario"/>
    </group>


</menu>
